# xsens_streaming

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format.yml
CMakeModules/: CMakeLists.txt  Findmtsdk.cmake
binding/python/: CMakeLists.txt
binding/python/xsens_streaming/: __init__.py  c_xsens_streaming.pxd  xsens_streaming.pxd  xsens_streaming.pyx
include/: xscommon.h  xscontroller.h  xsensdeviceapi.h
include/xscommon/: abstractadditionallogger.h  additionalloggerbase.h  calltracer.h  common_qdebug.h  consolelogger.h  fwupdate.h  journalexception.h  journaller.h  journalloglevel.h  threading.h  xprintf.h  xsens_debugtools.h  xsens_generic_matrix.h  xsens_janitors.h  xsens_math_throw.h  xsens_mutex.h  xsens_threadpool.h
include/xscontroller/: broadcastdevice.h  callbackmanagerxda.h  communicator.h  communicatorfactory.h  compat.h  datalogger.h  dataparser.h  datapoller.h  devicecommunicator.h  devicefactory.h  deviceredetector.h  devicetypes.h  fileloader.h  gpsstatus.h  idfetchhelpers.h  iointerface.h  iointerfacefile.h  iprotocolhandler.h  iprotocolmanager.h  lastresultmanager.h  messageextractor.h  messagelocation.h  messageserializer.h  mtbdatalogger.h  mtbfilecommunicator.h  mtdevice.h  mti6x0device.h  mti7device.h  mtibasedevice.h  mtsyncsettings.h  openportstage.h  packetstamper.h  protocolmanager.h  proxycommunicator.h  rangequeue.h  replymonitor.h  replyobject.h  restorecommunication.h  rx_tx_log.h  scanner.h  (+40 more)
include/xsens_streaming/: angularsegmentkinematicsdatagram.h  centerofmassdatagram.h  datagram.h  eulerdatagram.h  jointanglesdatagram.h  linearsegmentkinematicsdatagram.h  metadatagram.h  parsermanager.h  positiondatagram.h  quaterniondatagram.h  scaledatagram.h  timecodedatagram.h  trackerkinematicsdatagram.h  udpserver.h
include/xsensdeviceapi/: xdaconfig.h  xsaccesscontrolmode.h  xsalignmentframe.h  xscalibrateddatamode.h  xscallback.h  xscallbackplainc.h  xsconnectivitystate.h  xscoordinatesystem.h  xsdef.h  xsdevice.h  xsdeviceconfiguration.h  xsdeviceparameter.h  xsdeviceparameteridentifier.h  xsdeviceptrarray.h  xsdeviceref.h  xsdevicestate.h  xserrormode.h  xsfloatformat.h  xsgnssplatform.h  xsorientationmode.h  xsprocessingflag.h  xsprotocoltype.h  xsrejectreason.h  xsscanner.h  xsselftestresult.h  xsusbhubinfo.h
include/xstypes/: pstdint.h  xsanalogindata.h  xsarray.h  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbytearray.h  xscalibrateddata.h  xscanbaudcode.h  xscanconfigidentifier.h  xscandataidentifier.h  xscanoutputconfiguration.h  xscanoutputconfigurationarray.h  xscontrolline.h  xsdataidentifier.h  xsdatapacket.h  xsdatapacketptrarray.h  xsdebugcounters.h  xsdeviceid.h  xsdeviceidarray.h  xsdeviceoptionflag.h  xsdid.h  xsens_compat.h  xseuler.h  xsexception.h  xsfile.h  xsfilepos.h  xsfilterprofile.h  xsfilterprofilearray.h  xsglovedata.h  xsglovesnapshot.h  xsinforequest.h  xsint64array.h  xsintarray.h  xslibraryloader.h  xsmath.h  xsmath2.h  xsmatrix.h  xsmatrix3x3.h  xsmessage.h  (+46 more)
lib/: libmagfieldmapper.so.2020  libmagfieldmapper.so.2020.5.0  libxsensdeviceapi.so.2020.5.0
src/: CMakeLists.txt
src/streaming_protocol/: CMakeLists.txt  angularsegmentkinematicsdatagram.cpp  angularsegmentkinematicsdatagram.h  centerofmassdatagram.cpp  centerofmassdatagram.h  datagram.cpp  datagram.h  eulerdatagram.cpp  eulerdatagram.h  jointanglesdatagram.cpp  jointanglesdatagram.h  linearsegmentkinematicsdatagram.cpp  linearsegmentkinematicsdatagram.h  main.cpp  metadatagram.cpp  metadatagram.h  parsermanager.cpp  parsermanager.h  positiondatagram.cpp  positiondatagram.h  quaterniondatagram.cpp  quaterniondatagram.h  scaledatagram.cpp  scaledatagram.h  streamer.cpp  streamer.h  timecodedatagram.cpp  timecodedatagram.h  trackerkinematicsdatagram.cpp  trackerkinematicsdatagram.h  udpserver.cpp  udpserver.h
src/xsens_streaming/: CMakeLists.txt  angularsegmentkinematicsdatagram.cpp  centerofmassdatagram.cpp  datagram.cpp  eulerdatagram.cpp  jointanglesdatagram.cpp  linearsegmentkinematicsdatagram.cpp  main.cpp  metadatagram.cpp  parsermanager.cpp  positiondatagram.cpp  quaterniondatagram.cpp  scaledatagram.cpp  streamer.cpp  timecodedatagram.cpp  trackerkinematicsdatagram.cpp  udpserver.cpp
